fixing minor overflow hidden on navbar

--- a/src/layout/Navigation/style.scss
+++ b/src/layout/Navigation/style.scss
@@ -9,7 +9,6 @@ nav{
   padding: 1rem 5rem;
   background-color: $white;
   color: $black;
-  overflow-x: hidden;
 }
 
 #nav-logo{
